# ITMO_Storage

./: README.md
Cpp/task1/: task1.cpp
Cpp/task11/: BadFromString.cpp  BadFromString.h  CMakeLists.txt  main.cpp
Cpp/task2/: Book.cpp  Book.h  main.cpp  student.cpp  student.h
Cpp/task3/: bye.cpp  dynamiclib.make  hello.cpp  here.cpp  main.cpp  mylib.h  staticlib.make
Cpp/task4/: build.cmd
Cpp/task4/rational/lib_polynomial/: CMakeLists.txt  polynomial.cpp
Cpp/task4/rational/rational_poly/: CMakeLists.txt  rational_poly.cpp
Cpp/task4/rational/test/: CMakeLists.txt  my_test.cpp
Cpp/task5/: CMakeLists.txt  String.cpp  String.h  main.cpp
Cpp/task6/: CMakeLists.txt  Date.cpp  Date.h  main.cpp
Cpp/task7/: Array.h  Array.hpp  CMakeLists.txt  main.cpp
Cpp/task8/: Animal.cpp  Animal.h  Bear.cpp  Bear.h  CMakeLists.txt  Man.cpp  Man.h  ManBearPig.cpp  ManBearPig.h  Pig.cpp  Pig.h  Unit.cpp  Unit.h  main.cpp
Cpp/task9/: Array.h  Array.hpp  CMakeLists.txt  main.cpp
DM&ADS/: README.md
DM&ADS/DP/: A.java  B-longest increasing subseq.java  C.java  D-levenstein.java  E.java  F.java  G.java  H-DP on tree.java  K-DP on bit masks.java  L.java
DM&ADS/basic data structures/: A.java  A2-check if heap.java  B-check if correct bracket sequence.java  B2-priorityqueue.java  C-postfix.java  D-min on stack.java  E-DSU.java  F-list.java  G-queue.java  H-queue.java  I.java  J.java  K.java
DM&ADS/binary search/: I-binary search.java  J-real binary search.java  K-triple search.java
DM&ADS/boolean functions/: A-Krom form.java  B-Horn form.java  C-check fullness.java  D-disj&conj normal form.java  E-func elements scheme.java  F-zhegalkin polynomial.java
DM&ADS/combinatorics/: Task1.java  Task10.java  Task11.java  Task12.java  Task13.java  Task14.java  (+23 more)
haskell/: stack.yaml
(+596 files in other folders)
